Fixed button alignment in safari IOS browser

--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -66,6 +66,7 @@ button.increment, button.decrement{
     background: inherit;
     color: inherit;
     font-size: 1rem;
+    border-width: 2px;
     border-style: solid;
     font-weight: bold;
     border-color: white;
@@ -75,6 +76,7 @@ button.increment, button.decrement{
     border-radius: 0.35rem;
     text-align: -webkit-center;
     text-align: center;
+    padding: 0;
 
     &:hover{
         background: white;
